[package]
name = "shuttlexpress-rs"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Saretzki"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-item = "*"
serde = "*"
ron = "*"
lazy_static = "*"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_UI_Input", "Win32_Foundation", "Win32_System_LibraryLoader","Win32_Graphics_Gdi","Win32_UI_WindowsAndMessaging","Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
winres = "*"